--- a/YahooWeatherParser/YahooWeatherParser.csproj
+++ b/YahooWeatherParser/YahooWeatherParser.csproj
@@ -3,12 +3,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F3FBAA45-2AB4-4729-BF9A-9276BCFAF2F1}</ProjectGuid>
+    <ProjectGuid>{01AB7075-CB81-4AD2-90F2-DC444DE09363}</ProjectGuid>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <UseMSBuildEngine>true</UseMSBuildEngine>
     <OutputType>Library</OutputType>
-    <RootNamespace>YahooWeather.NET</RootNamespace>
-    <AssemblyName>YahooWeather.NET</AssemblyName>
+    <RootNamespace>YahooWeatherParser</RootNamespace>
+    <AssemblyName>YahooWeatherParser</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile78</TargetFrameworkProfile>
   </PropertyGroup>
@@ -32,26 +32,27 @@
   <ItemGroup>
     <Compile Include="MyClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="YahooWeather\YahooWeatherControl.cs" />
-    <Compile Include="YahooWeather\Units.cs" />
-    <Compile Include="YahooWeather\Channel.cs" />
-    <Compile Include="YahooWeather\Location.cs" />
-    <Compile Include="YahooWeather\Wind.cs" />
-    <Compile Include="YahooWeather\Atmosphere.cs" />
-    <Compile Include="YahooWeather\Astronomy.cs" />
-    <Compile Include="YahooWeather\Image.cs" />
-    <Compile Include="YahooWeather\Item.cs" />
-    <Compile Include="YahooWeather\Condition.cs" />
-    <Compile Include="YahooWeather\Forecast.cs" />
-    <Compile Include="YahooWeather\Guid.cs" />
-    <Compile Include="YahooWeather\Query.cs" />
-    <Compile Include="YahooWeather\Result.cs" />
-    <Compile Include="YahooWeather\QueryConverter.cs" />
+    <Compile Include="Astronomy.cs" />
+    <Compile Include="Atmosphere.cs" />
+    <Compile Include="Channel.cs" />
+    <Compile Include="Condition.cs" />
+    <Compile Include="Forecast.cs" />
+    <Compile Include="Guid.cs" />
+    <Compile Include="Image.cs" />
+    <Compile Include="Item.cs" />
+    <Compile Include="Location.cs" />
+    <Compile Include="Query.cs" />
+    <Compile Include="QueryConverter.cs" />
+    <Compile Include="Result.cs" />
+    <Compile Include="Units.cs" />
+    <Compile Include="Wind.cs" />
+    <Compile Include="YahooWeatherControl.cs" />
+    <Compile Include="ForcastConverter.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\portable-net45+wp80+win8+wpa81\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System.Net.Http">
       <HintPath>..\packages\Microsoft.Net.Http.2.2.29\lib\portable-net40+sl4+win8+wp71+wpa81\System.Net.Http.dll</HintPath>
     </Reference>
@@ -61,12 +62,9 @@
     <Reference Include="System.Net.Http.Extensions">
       <HintPath>..\packages\Microsoft.Net.Http.2.2.29\lib\portable-net40+sl4+win8+wp71+wpa81\System.Net.Http.Extensions.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\portable-net45+wp80+win8+wpa81\Newtonsoft.Json.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="YahooWeather\" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
 </Project>
