Treat the exception gracefully.

--- a/YahooWeatherParser/YahooWeatherParser.csproj
+++ b/YahooWeatherParser/YahooWeatherParser.csproj
@@ -48,6 +48,10 @@
     <Compile Include="Wind.cs" />
     <Compile Include="YahooWeatherControl.cs" />
     <Compile Include="ConditionCode.cs" />
+    <Compile Include="YahooWeatherException.cs" />
+    <Compile Include="Resources.Designer.cs">
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
@@ -65,6 +69,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
 </Project>
