Seperate the exceptions
Make it more clearly and useful for debugging

--- a/YahooWeatherParser/YahooWeatherParser.csproj
+++ b/YahooWeatherParser/YahooWeatherParser.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Resources.Designer.cs">
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="YahooWeatherNullContentException.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
